--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h1 id="city"></h1>
       <ul>
-        <li>Saturday 13:00</li>
+        <li>Last updated : <span id="date"></span></li>
         <li id="description"></li>
       </ul>
       <div class="row">
