--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
           <img
             src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
             alt="sunny"
-            class="float left"
+            id="icon"
+            class="float-left"
           />
-          <div class="float left">
+          <div class="float-left">
             <strong id="temperature"></strong>
             <span class="units">°C | <a href="#"> °F</a> </span>
           </div>
