--- a/index.html
+++ b/index.html
@@ -16,13 +16,28 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="city"></h1>
-      <ul>
-        <li>Last updated : <span id="date"></span></li>
-        <li id="description"></li>
-      </ul>
-      <div class="row">
-        <div class="col-md-6">
+      <div class="weather-app-wrapper">
+        <div class="Weather-App">
+          <form id="search-form" class="mb-5">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Enter city name"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-2">
+                <input type="submit" value="search" class="btn btn-primary" />
+              </div>
+            </div>
+          </form>
+          <h1 id="city"></h1>
+          <ul>
+            <li>Last updated : <span id="date"></span></li>
+            <li id="description"></li>
+          </ul>
+
           <img
             src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
             alt="sunny"
