--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   type="search"
                   placeholder="Enter city name"
                   class="form-control"
+                  id="city-input"
                 />
               </div>
               <div class="col-2">
@@ -46,7 +47,10 @@
           />
           <div class="float-left">
             <strong id="temperature"></strong>
-            <span class="units">°C | <a href="#"> °F</a> </span>
+            <span class="units">
+              <a href="#" id="celsius-link">°C </a>|
+              <a href="#" id="fahrenheit-link">°F</a>
+            </span>
           </div>
           <div class="col-md-6">
             <ul>
