--- a/index.html
+++ b/index.html
@@ -39,24 +39,34 @@
             <li id="description"></li>
           </ul>
 
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-            alt="sunny"
-            id="icon"
-            class="float-left"
-          />
-          <div class="float-left">
-            <strong id="temperature"></strong>
-            <span class="units">
-              <a href="#" id="celsius-link">°C </a>|
-              <a href="#" id="fahrenheit-link">°F</a>
-            </span>
-          </div>
-          <div class="col-md-6">
-            <ul>
-              <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="Wind"></span>km/h</li>
-            </ul>
+          <div class="weather-forecast">
+  <div class="row">
+    <div class="col-2">
+      <div class="weather-forecast-date">Thu</div>
+      <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="" width="42" />
+    </div>
+  </div>
+</div>
+<img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" id="icon" class="float-left" />
+<div class="float-left">
+  <strong id="temperature"></strong>
+  <span class="units">
+    <a href="#" id="celsius-link">°C</a> |
+    <a href="#" id="fahrenheit-link">°F</a>
+  </span>
+</div>
+<div class="col-md-6">
+  <ul>
+    <li>Humidity: <span id="humidity"></span>%</li>
+    <li>Wind: <span id="Wind"></span>km/h</li>
+  </ul>
+</div>
+<br />
+              <div class="weather-forecast=temperature">
+                <span class="weather-forecast-temperature-max"> 18° </span>
+                <span class="weather-forecast-temperature-min"> 12° </span>
+              </div>
+            </div>
           </div>
         </div>
         <small>
