--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
             <li id="description"></li>
           </ul>
 
-          <div class="weather-forecast">
-  <div class="row">
-    <div class="col-2">
-      <div class="weather-forecast-date">Thu</div>
+          <div class="weather-forecast" id="forecast">
+  
       <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="" width="42" />
     </div>
   </div>
@@ -61,13 +59,7 @@
     <li>Wind: <span id="Wind"></span>km/h</li>
   </ul>
 </div>
-<br />
-              <div class="weather-forecast=temperature">
-                <span class="weather-forecast-temperature-max"> 18° </span>
-                <span class="weather-forecast-temperature-min"> 12° </span>
-              </div>
-            </div>
-          </div>
+
         </div>
         <small>
           <a href="https://github.com/faithlets/Weather-App" target="_blank"
