Removed imperial conversion

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" id="icon" class="float-left" />
 <div class="float-left">
   <strong id="temperature"></strong>
-  <span class="units">
-    <a href="#" id="celsius-link">°C</a> |
-    <a href="#" id="fahrenheit-link">°F</a>
-  </span>
+  <span class="units">°C
+</span>
 </div>
 <div class="col-md-6">
   <ul>
