--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </div>
 </div>
-<img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" id="icon" class="float-left" />
+<img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="sunny" id="icon" class="float-right" />
 <div class="float-left">
   <strong id="temperature"></strong>
   <span class="units">°C
@@ -57,14 +57,15 @@
     <li>Wind: <span id="Wind"></span>km/h</li>
   </ul>
 </div>
-
-        </div>
+</div>
+        
         <small>
           <a href="https://github.com/faithlets/Weather-App" target="_blank"
             >Open-source code</a
           >
           by Faith Letsoara 👩‍💼
-        </small>
+          </small>
+        
       </div>
     </div>
     <script src="src/app.js"></script>
